# it-geophysics

./: .gitignore  results  serial_algorithm.cpp
CohSum_moment_tensors/args_displaces/: coherent_summation.cpp  coherent_summation.h  module.cpp
CohSum_moment_tensors/no_args_displaces/: coherent_summation.cpp  coherent_summation.h  module.cpp
serial/: CMakeLists.txt  blocks_external.cpp  blocks_realize.cpp  coherent_summation.cpp  coherent_summation.h  external_times.cpp  module.cpp  receivers_blocks.cpp  recievers_blocks.cpp  setup.py  source.cpp  sum.py  times_blocks.cpp  vect_receivers_blocks.cpp
tensor_moments/lib/displ_args/: setup.py
tensor_moments/lib/displ_not_args/src/: amplitudes_calculator.h
tensor_moments/test/many_componets_test/eigen/: test_time.cpp
tensor_moments/test/many_componets_test/vectorize_tests/: CMakeLists.txt  tests.txt  times_script.sh  vector_time_test.cpp
tensor_moments/test/many_componets_test/vectorize_tests/results_times/: 128_vect_times.txt  256_vect_times.txt  no_vect_times.txt
tensor_moments/test/many_componets_test/vectorize_tests/src/: amplitudes_calculator.h  amplitudes_calculator_m128.h  amplitudes_calculator_m256.h  amplitudes_calculator_m512.h  coherent_summation.h
tensor_moments/test/one_componet_tests/amplitudes_times_test/: times_script.sh  times_tests.cpp
tensor_moments/test/one_componet_tests/blocks_test/: times_script.sh
tensor_moments/test/one_componet_tests/library_test/: times_script.sh
tests/blocks_tests/: blocks_realize.cpp  internal_samples_blocks.cpp  receivers_blocks.cpp  samples_blocks.cpp
tests/cache_tests/: rec_external.cpp  samples_external.cpp  samples_internal.cpp  source.cpp
tests/parallel_tests/: external_blocks.cpp  x_z_external.cpp  z_external.cpp
tests/vect_tests/: blocks_realize.cpp  vect_blocks.cpp
(+83 files in other folders)
